language/move-lang/tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_infinite_type_terminates.exp
error[E04019]: cyclic type instantiation
   ┌─ tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_infinite_type_terminates.move:11:18
   │
11 │         unbox<T>(f<Box<T>>(n - 1, Box<T> { x }))
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                  │ │
   │                  │ The type parameter 'f::T' was instantiated with the type '0x8675309::M::Box<T>', which contains the type parameter 'f::T'. This recursive call causes the instantiation to recurse infinitely
   │                  Invalid call to '0x8675309::M::f'

